<resources>
    <string name="app_name">SMART CANE</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="ok">OK</string>
    <string name="forget">잊어버렸어요.</string>
    <string name="resultStartView">TextView</string>
    <string name="start">START</string>
    <string name="enroll">Enroll</string>
    <string name="enrollDevice">Enroll new device</string>
    <string name="search">SEARCH</string>
    <string name="execute">EXECUTE</string>
    <string name="post">post</string>
    <string name="command">command</string>
    <string name="value">value</string>
    <string name="logout">로그아웃</string>
    <string name="kor_enroll">등록</string>
    <string name="phone_number">보호자 연락처</string>


    <string name="kakao_app_key">7e23c35f2eab3d565574908a0444590a</string>

</resources>
